--- a/app/src/main/res/values/configs_uri.xml
+++ b/app/src/main/res/values/configs_uri.xml
@@ -3,4 +3,6 @@
     <string name="uri_user_login">user/login</string>
     <string name="uri_user_profile_update">user/editprofile</string>
     <string name="uri_story_create">story/create</string>
+    <string name="uri_story_del">story/del</string>
+    <string name="uri_story_list">story/list</string>
 </resources>
