--- a/app/src/main/res/values/configs_uri.xml
+++ b/app/src/main/res/values/configs_uri.xml
@@ -8,5 +8,6 @@
     <string name="uri_story_create">story/create</string>
     <string name="uri_story_del">story/del</string>
     <string name="uri_story_list">story/list</string>
-
+    <string name="uri_template_list">template/list</string>
+    <string name="uri_music_list">music/list</string>
 </resources>
