--- a/app/src/main/res/values/configs_uri.xml
+++ b/app/src/main/res/values/configs_uri.xml
@@ -14,4 +14,5 @@
     <string name="uri_music_download">music/download</string>
     <!--获取模板类型列表-->
     <string name="uri_template_gettype">template/gettype</string>
+    <string name="uri_music_gettype">music/gettype</string>
 </resources>
