--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,4 +45,8 @@
         <item name="android:height">0.5dp</item>
         <item name="android:background">@drawable/divider_for_list</item>
     </style>
+    
+    <style name="StorySettings.Title" parent="">
+        <item name="android:textColor">@color/app_primary_transparent_30p</item>
+    </style>
 </resources>
