--- a/app/src/main/res/layout/fragment_card_gallery.xml
+++ b/app/src/main/res/layout/fragment_card_gallery.xml
@@ -9,56 +9,49 @@
     <LinearLayout
         android:id="@+id/head_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="28dp"
         android:orientation="horizontal"
-        android:padding="12dp">
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp">
 
         <ImageView
             android:id="@+id/menu_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:background="@mipmap/icon_nav" />
+            android:background="@mipmap/icon_nav"
+            android:layout_marginLeft="24dp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="24dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="@string/my_stores"
             android:textColor="@color/app_sixth"
-            android:textSize="16sp" />
-
-        <RelativeLayout
-            android:id="@+id/info_board"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="40dp">
+            android:textSize="18sp"/>
 
             <ImageView
                 android:id="@+id/gift"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:layout_gravity="left"
-                android:layout_marginRight="30dp"
                 android:background="@mipmap/activity" />
 
             <TextView
                 android:id="@+id/gift_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="-34dp"
-                android:layout_toRightOf="@+id/gift"
                 android:background="@drawable/active_message_count_bg"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="0"
+                android:layout_marginTop="-5dp"
+                android:layout_marginLeft="-4dp"
                 android:textSize="12sp"
-                android:visibility="gone" />
-        </RelativeLayout>
+                android:visibility="gone"/>
     </LinearLayout>
 
     <com.wisape.android.view.GalleryView
@@ -66,17 +59,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="12dp"
-        android:layout_marginTop="@dimen/span_space"
         android:layout_weight="1"
-        app:layout_heightPercent="74%"
-        app:layout_widthPercent="100%" />
-
+        android:layout_marginTop="8dp"/>
 
     <Button
         android:id="@+id/add_story"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         android:layout_gravity="right"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginRight="16dp"
         android:background="@drawable/btn_add_story_selector" />
 </LinearLayout>
