--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
     <style name="AppActionBar" parent="Widget.AppCompat.Light.ActionBar">
         <item name="displayOptions">homeAsUp|showHome|showTitle</item>
         <item name="elevation">0dp</item>
-        <item name="homeAsUpIndicator">@drawable/icon_back</item>
+        <item name="homeAsUpIndicator">@mipmap/icon_back</item>
         <item name="titleTextStyle">@style/AppActionBar.TitleStyle</item>
     </style>
 
@@ -35,6 +35,7 @@
 
     <style name="App.TextStyle.Edit" parent="App.TextStyle.Primary">
         <item name="android:textSize">@dimen/app_text_size_xlarge</item>
+        <item name="android:textColor">@color/app_sixth_transparent_50p</item>
     </style>
 
     <style name="App.TextStyle.Secondary" parent="App.TextStyle.Primary">
